--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" href="/Users/PC/Desktop/porpolio/images/mustee1.jpg">
   <title>Mustapha Aliyu Mungadi — Mustee Tech Global</title>
   <meta name="description" content="Portfolio of Mustapha Aliyu Mungadi — developer, CEO of Mustee Tech Global. Inspiring students to learn technology." />
   <link rel="stylesheet" href="style.css">
@@ -45,7 +46,7 @@
         </div>
         <div class="hero-right">
           <div class="photo-card">
-            <img src="/Users/PC/Desktop/porpolio/images/profile-placeholder.jpg" alt="profile-placeholder.jpeg">
+            <img src="images/profile-placeholder.jpg" alt="profile-placeholder.jpeg">
             <div class="photo-caption">Mustapha Al. Mungadi <hr> CEO. Mustee Tech Global <br> Developer 1 at MJ Global tech jega</div>
           </div>
         </div>
@@ -83,19 +84,19 @@
       <h2>Projects</h2>
       <div class="project-grid">
         <article class="project-card">
-          <div class="project-img"><img class="project-img" src="/Users/PC/Desktop/porpolio/images/photo1.jpeg" alt="photo1.jpeg"></div>
+          <div class="project-img"><img class="project-img" src="images/photo1.jpeg" alt="photo1.jpeg"></div>
           <h3>Global Student Connect</h3>
           <p>Platform connecting students and universities — Next.js, Firebase, UX.</p>
           <div class="links"><a href="#">Live</a> <a href="#">Code</a></div>
         </article>
         <article class="project-card">
-          <div class="project-img"><img class="project-img" src="/Users/PC/Desktop/porpolio/images/photo2.jpeg" alt="photo2.jpeg"></div>
+          <div class="project-img"><img class="project-img" src="images/photo2.jpeg" alt="photo2.jpeg"></div>
           <h3>Mustee Tech Global Site</h3>
           <p>Official site and curriculum portal for student classes.</p>
           <div class="links"><a href="#">Live</a> <a href="#">Code</a></div>
         </article>
         <article class="project-card">
-          <div class="project-img"><img class="project-img" src="/Users/PC/Desktop/porpolio/images/photo3.jpeg" alt="photo3.jpeg"></div>
+          <div class="project-img"><img class="project-img" src="images/photo3.jpeg" alt="photo3.jpeg"></div>
           <h3>Portfolio Starter</h3>
           <p>Open-source starter template for students to build portfolios.</p>
           <div class="links"><a href="#">Live</a> <a href="#">Code</a></div>
@@ -138,7 +139,7 @@
     <section id="gallery" class="gallery container">
       <h2>Gallery</h2>
       <div class="grid">
-        <img src="/Users/PC/Desktop/porpolio/images/photo-1.jpg" alt="photo-1.jpg">
+        <img src="images/photo-1.jpg" alt="photo-1.jpg">
         <img src="images/photo-2.jpg" alt="event">
         <img src="images/photo-3.jpg" alt="event">
       </div>
